--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
                     <li><a href="Interest.com/">Interest</a></li>
                     <li><a href="Contact.com/"> Contact</a></li></ul>
                 <h1>Hello, I'm</h1>
-                <h2>Shrejal Bhattarai</h2>
-                <p>Hi, I'm Shrejal Bhattarai a web developer and I love making beautiful websites.</p>
+                <h2>Shrejal bhattarai</h2>
+                <p>Hi, I'm Shrejal Bhattarai. I'm a web developer and I love making beautiful websites.</p>
                 <div class="buttons">
                     <a href="#about" class="btn about-btn">About Me<span class="icon"></span></a>
                     <a href="#projecs" class="btn project-btn">Projects<span class="icon"></span></a>
                 </div>
             </div>
               <div class="image">
-                <img src="portfolio.jpg" alt= "profile picture" height="445" width="345" frameborder="0" scrolling="no" ></iframe>
+                <img src="mypic.jpeg" alt= "profile picture" height="445" width="345" frameborder="0" scrolling="no" ></iframe>
               </div>
     </header>
     <br>
   <div class="about-me">  
 <b><h3> About me:</h3></b>
   </div>
-<p>Hi, I'm Shrejal Bhattarai a passionate eveloper with a love for creating stunning and functional websites. 
+<p>Hi, I'm Shrejal Bhattarai, a passionate web developer with a love for creating stunning and functional websites. 
     I specialize in front-end development and, UI/UX design. 
        I enjoy turning ideas into reality through clean code and modern design.</p>
     <p>When I'm not coding, you can find me exploring nature, playing guitar, or reading novels. 
@@ -64,9 +64,9 @@
     </tr>
     <tr>
         <td>Secondary Education</td>
-        <td>Azalea secondary Boarding school </td>
+        <td>Azalea Secondary  Boarding School</td>
         <td>PABSON</td>
-        <td>A</td>
+        <td>A+</td>
     </tr>
 </table>
 <br>
@@ -92,7 +92,7 @@
 <div class="featured">
 <h3> Featured Projects:</h3></div>
 <p>
-    I have worked on many projects over the years. These are some of the projects - 
+    I have worked on many projects over the years. These are some.
 </p>
 <div class="projects-wrapper">
     <div class="project-card">
@@ -114,7 +114,7 @@
 
 
 <h3>
-    connect with me....
+    connect with me, lets make magic
 </h3>
 <div class="form">
     <form>
@@ -125,8 +125,8 @@
     </form>
 </div>
 <footer>
-   2025 Shrejal
-   <p>Designed by Shrejal</p>
+   2025 
+   <p>Designed by Shrejal bhattarai</p>
 </footer>
 </body>
 </html>
